s Signed-off-by: zhangrx <zhangrx@communet.io>

--- a/reading/index.html
+++ b/reading/index.html
@@ -180,7 +180,7 @@
 
             <li class="collapse-level-0" collapse-level="0">
                 <a class="no-padding" href="/categories/源码阅读/">
-                    源码阅读 <span class="right">3 篇</span></a>
+                    源码阅读 <span class="right">4 篇</span></a>
                 </a>
             </li>
 
@@ -188,7 +188,7 @@
 
             <li class="collapse-level-1" collapse-level="1">
                 <a class="no-padding" href="/categories/源码阅读/security源码导读系列/">
-                    security源码导读系列 <span class="right">3 篇</span></a>
+                    security源码导读系列 <span class="right">4 篇</span></a>
                 </a>
             </li>
 
@@ -203,16 +203,16 @@
         
 
             <li class="collapse-level-0" collapse-level="0">
-                <a class="no-padding" href="/categories/心尘随笔/">
-                    心尘随笔 <span class="right">1 篇</span></a>
+                <a class="no-padding" href="/categories/大型网站技术架构/">
+                    大型网站技术架构 <span class="right">1 篇</span></a>
                 </a>
             </li>
 
         
 
             <li class="collapse-level-0" collapse-level="0">
-                <a class="no-padding" href="/categories/大型网站技术架构/">
-                    大型网站技术架构 <span class="right">1 篇</span></a>
+                <a class="no-padding" href="/categories/心尘随笔/">
+                    心尘随笔 <span class="right">1 篇</span></a>
                 </a>
             </li>
 
@@ -296,7 +296,7 @@
                         <div class="book-item col s12 m6">
                             <div class="card small hoverable">
                                 <div class="card-image waves-effect waves-block waves-light">
-                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/view/ark_article_cover/retina/public/12766781.jpg?v=1441343065.0">
+                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/lpic/s28889106.jpg">
                                 </div>
                                 <div class="card-content indigo-link-context">
                                     <span class="card-title truncate activator grey-text text-darken-4">极客与团队：软件工程师的团队生存秘笈
@@ -322,7 +322,7 @@
                         <div class="book-item col s12 m6">
                             <div class="card small hoverable">
                                 <div class="card-image waves-effect waves-block waves-light">
-                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/view/ark_article_cover/retina/public/12233881.jpg?v=1439964746.0">
+                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/lpic/s28889106.jpg">
                                 </div>
                                 <div class="card-content indigo-link-context">
                                     <span class="card-title truncate activator grey-text text-darken-4">影响力：卡耐基最实用的说服术与社交技巧
@@ -379,7 +379,7 @@
                         <div class="book-item col s12 m6">
                             <div class="card small hoverable">
                                 <div class="card-image waves-effect waves-block waves-light">
-                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/view/ark_article_cover/retina/public/15233695.jpg?v=1446905622.0">
+                                    <img class="card-cover-image activator" src="https://img3.doubanio.com/lpic/s28889106.jpg">
                                 </div>
                                 <div class="card-content indigo-link-context">
                                     <span class="card-title truncate activator grey-text text-darken-4">深入理解Java虚拟机：JVM高级特性与最佳实践
