--- a/about/index.html
+++ b/about/index.html
@@ -567,7 +567,7 @@
         <div class="card">
             <div class="card-content">
                 <!-- Duoshuo Comment BEGIN -->
-                <div class="ds-thread" data-thread-key="about/index.html" data-title="关于" data-url="http://yoursite.com/about/index.html"></div>
+                <div class="ds-thread" data-thread-key="about/index.html" data-title="关于" data-url="http://jbeacon.top/about/index.html"></div>
 
                 <script type="text/javascript">
                     console.log(document.querySelector('.ds-thread'));
